--- a/pokedex.css
+++ b/pokedex.css
@@ -1,49 +1,111 @@
-body
-{
-    margin: 0;
-    padding: 0;
-    font-family: 'Courier New', Courier, monospace;
+* {
+  margin: 0;
+  padding: 0;
 }
 
+a {
+  color: #fff;
+  text-decoration: none;
+  transition: 0.3s;
+}
 
+a:hover {
+  opacity: 0.7;
+}
 
-#navegar{
-    padding:20px 20px;
-    background-color: rgb(132, 17, 17);
-    display: flex;
-    justify-content: space-between;
+.logo {
+  font-size: 24px;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+}
+
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
+  background: #2e2323;
+  height: 8vh;
+}
+
+main {
+  background: url("https://i.pinimg.com/736x/b0/c0/13/b0c013d0e19dfab5535f7c22f8ffd037.jpg") no-repeat center center;
+  background-size: cover;
+  height: 92vh;
+}
+
+.nav-list {
+  list-style: none;
+  display: flex;
+}
+
+.nav-list li {
+  letter-spacing: 3px;
+  margin-left: 32px;
+}
+
+.mobile-menu {
+  display: none;
+  cursor: pointer;
+}
+
+.mobile-menu div {
+  width: 32px;
+  height: 2px;
+  background: #fff;
+  margin: 8px;
+  transition: 0.3s;
+}
+
+@media (max-width: 999px) {
+  body {
+    overflow-x: hidden;
+  }
+  .nav-list {
+    position: absolute;
+    top: 8vh;
+    right: 0;
+    width: 50vw;
+    height: 92vh;
+    background: #23232e;
+    flex-direction: column;
     align-items: center;
-    font-size: 18px;
+    justify-content: space-around;
+    transform: translateX(100%);
+    transition: transform 0.3s ease-in;
+  }
+  .nav-list li {
+    margin-left: 0;
+    opacity: 0;
+  }
+  .mobile-menu {
+    display: block;
+  }
 }
 
-
-
-.logo{
-    color: black;
-    text-decoration: none;
-    padding:10px 15px;
+.nav-list.active {
+  transform: translateX(0);
 }
 
-.logo:hover{
-    color: white;
-    background-color: black;
-    border-radius: 15px;
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
-.navbar-nav{
-        display:flex;
-        margin:0;
-        padding:0;
-        list-style-type: none;
-}
-.nav-link{
-    align-items: center;
-    padding: 10px 15px;
-    text-decoration: none;
+.mobile-menu.active .line1 {
+  transform: rotate(-45deg) translate(-8px, 8px);
 }
 
-.nav-link:hover{
-    background-color: black;
-    color: whitesmoke;
-    border-radius: 15px;
+.mobile-menu.active .line2 {
+  opacity: 0;
+}
+
+.mobile-menu.active .line3 {
+  transform: rotate(45deg) translate(-5px, -7px);
 }
