alinhamento bootstrap css

--- a/codigos/pokeall.css
+++ b/codigos/pokeall.css
@@ -20,7 +20,7 @@ body{
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     position: relative;
 
-    width: 85vw;
+    width: 89vw;
     max-width: none;
     min-width: 280px;
 
@@ -46,6 +46,7 @@ body{
     font-size: clamp(1rem, 1.5vw, 1.2rem);
     line-height: 1.5;
     overflow-y: auto;
+    height: 30rem;
 }
 
 @media (max-width: 600px){
@@ -57,7 +58,7 @@ body{
 
 .left-btn{
    border: 3px solid black;
-   border-radius: 8px;
+   border-radius: 20px;
 }
 
 .left-btn form, .left-btn ol{ 
@@ -67,5 +68,6 @@ body{
     border-radius: 15px;
     padding: 0.3rem 0.8rem;
 }
+
 
 
