fiz aparecer a busca em ambas as paginas, fiz uma classe escondido para o card de busca

--- a/codigos/pokeall.css
+++ b/codigos/pokeall.css
@@ -12,6 +12,11 @@ body{
     padding: 1rem;
 }
 
+.escondido
+{
+    position: none !important;/*important garante que sobrescreva todo resto*/
+}
+
 .box-vermelha{
     display: flex;
     background-color: red;
