adição titulo e subtitulo

--- a/codigos/dex.css
+++ b/codigos/dex.css
@@ -115,7 +115,7 @@ span
     3px -3px 0 rgb(33,33,186),
    -3px 3px 0 rgb(33,33,186);
 }
-
+/*design subtitulo*/
 .subtitulo{
     color: rgb(215, 200, 200);
     background-color: rgb(143, 14, 14);
