--- a/codigos/pokeall.css
+++ b/codigos/pokeall.css
@@ -5,6 +5,7 @@
 body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     display:flex;
+    flex-direction: column;
     min-height: 100;
     background-color:lightpink;
     justify-content: center;
@@ -60,6 +61,10 @@ body{
     .box-vermelha{
         height: auto;
         max-height: none;
+    }
+    #favs
+    {
+        line-height: 1rem;
     }
 }
 
@@ -130,6 +135,11 @@ body{
     border-radius: 5px;
     background-color: gray;
     transition: all 0.3s ease;
+    line-height: 1.8rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 
 }#favs:hover{/*era musica*/
     filter:brightness(1.2);
@@ -166,7 +176,10 @@ body{
     filter:brightness(1.2);
     transition: all 0.3s ease;
 }
-
+#buscaPronta{
+    width: 100%;
+    margin-top: 10px;
+}
 #busca{
     margin-left: 10px;
     margin-right: 10px;
@@ -292,6 +305,10 @@ body{
     #busca, #botaoSubmit, #random, #music, #settings {
         width: 100%;
         font-size: 0.9rem;
+    }
+    #favs
+    {
+        line-height: 1.4rem;
     }
 }
 
