--- a/codigos/pokeall.css
+++ b/codigos/pokeall.css
@@ -95,7 +95,7 @@ body{
     }
 
     .texto {
-      color: #7B2CBF; 
+      color: #7B2CBF;
       font-weight: bold;
       font-size: 16px;
     }
@@ -119,7 +119,7 @@ body{
     border-radius: 20px;
 }
 
-.left-btn form, .left-btn ol{ 
+.left-btn form, .left-btn ol{
     display:flex ;
     flex-direction: column;
     gap:10px;
@@ -158,6 +158,22 @@ body{
 }
 
 #mostrarDex:hover{/*era setting*/
+    transition: all 0.3s ease;
+    filter:brightness(1.2)
+}
+
+#home{ /*era settings*/
+    margin-left: 10px;
+    margin-right: 10px;
+    color: white;
+    border: 2px solid rgb(29, 129, 54);
+    box-shadow: 2px;
+    border-radius: 5px;
+    background-color: rgb(23, 158, 57);
+    transition: all 0.3s ease;
+}
+
+#home:hover{/*era setting*/
     transition: all 0.3s ease;
     filter:brightness(1.2)
 }
@@ -247,7 +263,7 @@ body{
   border-radius: 50%;
 }
 
-.bolinhas-topo .azul     { background-color: #00CFFF; width: 50px; height: 50px;} 
+.bolinhas-topo .azul     { background-color: #00CFFF; width: 50px; height: 50px;}
 .bolinhas-topo .vermelha { background-color: #ff5f56; }
 .bolinhas-topo .amarela  { background-color: #ffbd2e; }
 .bolinhas-topo .verde    { background-color: #27c93f; }
@@ -293,7 +309,7 @@ body{
     }
 
     .bolinhas-topo .azul {
-        width: 40px; 
+        width: 40px;
         height: 40px;
     }
 
@@ -342,7 +358,7 @@ body{
     }
 
     .bolinhas-topo .azul {
-        width: 30px; 
+        width: 30px;
         height: 30px;
     }
 
@@ -399,7 +415,7 @@ body{
     }
 
     .bolinhas-topo .azul {
-        width: clamp(25px, 10vw, 50px); 
+        width: clamp(25px, 10vw, 50px);
         height: clamp(25px, 10vw, 50px);
     }
 
@@ -446,7 +462,7 @@ body{
     }
 
     .bolinhas-topo .azul {
-        width: clamp(20px, 15vw, 40px); 
+        width: clamp(20px, 15vw, 40px);
         height: clamp(20px, 15vw, 40px);
     }
 
