--- a/codigos/pokeall.css
+++ b/codigos/pokeall.css
@@ -5,7 +5,7 @@ body{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     display:flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100;
     background-color:lightpink;
     justify-content: center;
     align-items: flex-start;
@@ -24,8 +24,10 @@ body{
   border-radius: 20px;
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
   position: relative;
-  width: 1000px;
-  height: 100vh;
+  width: 89vw;
+  min-width: 280px;
+  height: 95vh;
+  max-height: 600px;
 }
 
 .titulo {
@@ -53,7 +55,8 @@ body{
 @media (max-width: 600px){
     .navbarra
     {
-      max-width: 400px;
+        max-width: 400px;
+
     }
     #busca
     {
@@ -123,7 +126,7 @@ body{
     }
 
 .row{
-    width: 60re;
+    width: 40rem;
     background-color: white;
     padding: 0px;
     border: 3px solid rgb(184, 180, 180);
@@ -134,12 +137,16 @@ body{
   gap: 8px;
 }
 
-.left-btn form, .left-btn ol{
-    display:flex ;
-    flex-direction: column;
-    gap:10px;
-    height: fit-content;
-    padding: 0.150rem 0.5rem;
+.left-btn{
+  margin-left: 5px;
+  background-color: rgb(255, 56, 56);
+  width: 10rem;
+  height: 20rem;
+  position: sticky;
+  top: 0;
+  padding-top: 15px;
+  border: 3px solid rgb(201, 27, 27);
+  border-radius: 20px;
 }
 .bolinha {
   width: 12px;
@@ -182,10 +189,10 @@ body{
 }
 
 .left-btn {
-  margin-left: 5px;
+  margin-left: 30px;
   background-color: rgb(255, 56, 56);
   width: 10rem;
-  height: 20rem;
+  height: 15rem;
   position: sticky;
   top: 0;
   padding-top: 15px;
@@ -329,19 +336,9 @@ body{
     width: 75vw;
     max-width: 1400px;
     height: 85vh;
-    overflow-y: hidden;
-  }
-  .conteudo { font-size: 1.2rem;}
-}
-
-@media (max-width: 1150px) {
-    .box-vermelha {
-        height: auto;
-        min-height: 100vh;
-        font-size: 15px
-
     }
-}
+  }
+  .conteudo { font-size: 1.2rem; }
 
 @media (max-width: 800px) {
     .box-vermelha {
@@ -374,7 +371,7 @@ body{
     }
 
     .left-btn {
-        width: 100%;
+        width: 90%;
         max-width: 15rem;
         height: fit-content;
         margin-left: 0;
@@ -389,9 +386,6 @@ body{
         gap: 10px;
     }
 
-    .row {
-        width: 92%;
-    }
 
     .bolinhas-topo {
         top: 1rem;
@@ -418,11 +412,8 @@ body{
 
 @media (max-width: 490px) {/*telas de celular*/
     .box-vermelha {
-        height: 100vw;
+        width: 100vw;
         padding: 1rem 0.5rem;
-        justify-content: center;
-        min-height: none;
-        
     }
     #busca
     {
@@ -478,8 +469,9 @@ body{
   .box-vermelha
   {
     width: 100%;
-    margin: 0;
-    padding:0;
+    height: 100%;
+    border-radius: 0px;
+
   }
   .menos400
   {
@@ -495,4 +487,9 @@ body{
   {
     width: 93%;
   }
+}
+
+@media (min-height)
+{
+
 }
